# qyt-aiops-session-17

./: README.md  main.py  pyproject.toml
external_libs/qyt_libs/: pyproject.toml
external_libs/qyt_libs/qyt_libs/: __init__.py  qytang_ping.py  qytang_ssh.py
external_libs/qyt_libs/qyt_libs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
homework/: Random_IPv4.py
homework/Day_1/: Python_First.py
homework/Day_11/: check_configuration.py
homework/Day_12/: qytang_multicmd.py
homework/Day_13/: qytping.py
homework/Day_14/: Simple_SSH_Client.py  save_fivedayago_time_2025-09-05_16-38-56.txt  save_time_to file.py
homework/Day_15/: sqlite_orm.py
homework/Day_15/db/: sqlalchemy_sqlite3.db
homework/Day_16/: get_config_insert_db.py
homework/Day_16/db/: sqlalchemy_sqlite3.db
homework/Day_2/: Question4.py  my_language.py  re_ip.py
homework/Day_3/: Regular_Expression_Test_1.py  Regular_Expression_Test_2.py
homework/Day_4/: check_network_info.py
homework/Day_5/: check_gateway.py
homework/Day_6/: firewall_info_to_dict.py
homework/Day_8/: simple_ping.py
homework/Day_9/: paramiko_ssh.py  ssh_get_route.py
homework/classic_network_protocols/Day_1/: generate_gratuitous_arp.py
homework/classic_network_protocols/Day_2/: udp_client.py  udp_server.py
homework/classic_network_protocols/Day_3/: matplotlib_demo.py  matplotlib_fixing_Chinese_font_.py  matplotlib_show_netflow_info.py  matplotlib_test.py
homework/classic_network_protocols/Day_4/: analyse_cpu_and_men.py  bar_chart.py  cpu_mem.db  line_chart.py  write_db.py  write_db_local.py  write_db_ssh.py
(+16 files in other folders)
