[project]
name = "qyt-aiops-session-17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kamene>=0.32",
    "paramiko>=4.0.0",
    "qyt-libs",
]

[tool.uv.workspace]
members = [
    "external_libs/qyt_libs",
]

[tool.uv.sources]
qyt-libs = { workspace = true }
