[project]
name = "qyt-aiops-session-17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fonttools>=4.60.0",
    "kamene>=0.32",
    "matplotlib>=3.10.6",
    "paramiko>=4.0.0",
    "pyinstaller>=6.15.0",
    "qyt-libs",
    "scapy>=2.6.1",
    "sqlalchemy>=2.0.43",
]

[tool.uv.workspace]
members = [
    "external_libs/qyt_libs",
]

[tool.uv.sources]
qyt-libs = { workspace = true }
